Updated main.css to include class .answer-failed. Also, updated index.html to call HTTPS, once the Back-End is ready we'll have the solution fully hosted in the cloud between GitHub Pages and Amazon.

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ height: calc(100vh - 15px);
     background-color: #5cb85c;
 }
 
+.answer-failed{
+    background-color: #ff0000;
+}
+
 .roulette_container{
     margin-top: 30%;
     margin-left: 10%;
